@@ -3,6 +3,9 @@ Revision history for firebird_fdw
 1.4.0	2024-0?-??
 	- Support for PostgreSQL 17 added
 	- Basic support for UUID datatype added
+	- Proper support for Firebird TIME/TIMESTAMP datatypes added
+	- Support for Firebird TIME WITH TIME ZONE / TIMESTAMP WITH TIME ZONE
+	  datatypes added
 
 1.3.1	2023-06-22
 	- Support for PostgreSQL 16 added
